# neutron

./: .gitignore  pyproject.toml
client/: config.py  desktop_api.py  main.py  routes.py  storage.py
client/templates/: base.html  create_game.html  create_platform.html  games_list.html  login.html  settings.html
server/: .env.example  auth.py  igdb_service.py  main.py  models.py  schemas.py
server/alembic/: env.py
server/alembic/versions/: 05f72fc57244_initial_migration.py  3d18e9e070fd_add_game_and_save_models.py  76ac23c8ec53_add_user_models.py  8c74f33f410e_add_user_links_to_save_and_add_playtime_.py
